--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "~6.4.0",
+    "ajv-keywords": "~3.2.0",
     "aws-amplify": "^0.3.3",
     "aws-amplify-react": "^0.1.43",
     "esri-loader": "^2.2.0",
@@ -10,7 +12,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "upath": "~1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
